--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ byteorder = "1.5.0"
 binrw = "0.15.0"
 zip = "4.3.0"
 tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time"] }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["test-util", "macros"] }
